microservices/pf-microservices-template-first/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pf-microservices-template-first
