microservices/pf-microservices-template-first/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: NodePort
  selector:
    service: pf-microservices-template-first
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
