microservices/pf-microservices-template-first/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pf-microservices-template-first
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "pf-microservices-template-first"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: service
          servicePort: 8080
